# Datafyme

./: .gitignore  LICENSE  README.md  pyproject.toml
backend/: .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
backend/reportassistant/: manage.py
backend/reportassistant/accounts/: views.py
backend/reportassistant/accounts/templates/accounts/: login.html  register.html
backend/reportassistant/chat/: forms.py  models.py  urls.py  views.py
backend/reportassistant/chat/migrations/: 0001_initial.py  0002_message_conversation_id.py  0003_remove_message_conversation_id_and_more.py  0004_conversation_title.py  0005_conversation_status_conversation_status_desc.py
backend/reportassistant/chat/templates/chat/: chat.html  chat_history.html  navbar.html  trial.html  trial_simple.html
backend/reportassistant/chat/utils/: message.py
backend/reportassistant/common/: custom_logging.py
backend/reportassistant/common/ai/: model.py
backend/reportassistant/common/db/: postgres.py
backend/reportassistant/common/db/manager/: abc.py  types.py  (+2 more)
backend/reportassistant/common/graph_db/: graph_db.py
backend/reportassistant/dashboard/: models.py  urls.py  views.py
backend/reportassistant/dashboard/migrations/: 0001_initial.py  0002_initial.py  0003_rename_user_id_dashboard_user_and_more.py  0004_alter_dashboard_user.py  0005_alter_dashboard_id_alter_dashboardslot_id.py  0006_dashboardslot_height_dashboardslot_width.py  0007_alter_dashboardslot_chart.py  0008_alter_dashboardslot_chart.py
backend/reportassistant/dashboard/templates/: add_dashboard.html  dashboard.html  dashboard_selector.html
backend/reportassistant/db_configurator/: __init__.py  apps.py  forms.py  models.py  tasks.py  urls.py  views.py
backend/reportassistant/db_configurator/ai/: __init__.py
backend/reportassistant/db_configurator/migrations/: 0001_initial.py  0002_alter_databasesource_id.py  0003_databasesource_is_paused.py  0004_databasesource_group_and_more.py  0005_alter_databasesource_group.py  0006_databasesource_display_name.py  0007_databasesource_is_ready.py  0008_remove_databasesource_is_paused_and_more.py  0009_alter_databasesource_status.py  0010_tabledocumentation.py  0011_alter_databasesource_unique_together_and_more.py  0012_alter_databasesource_user.py  0013_databasesource_source_type_alter_databasesource_type.py  0014_alter_databasesource_source_type.py
backend/reportassistant/db_configurator/utils/: __init__.py
backend/reportassistant/dbloader/: apps.py  urls.py  views.py
backend/reportassistant/dbloader/services/: __init__.py
backend/reportassistant/home/: models.py  urls.py  views.py
backend/reportassistant/home/migrations/: 0001_initial.py
backend/reportassistant/home/templates/: base_generic.html
backend/reportassistant/reportassistant/: asgi.py  settings.py  urls.py  wsgi.py
backend/reportassistant/reporter_agent/: apps.py  models.py  task.py  tests.py  urls.py  views.py
backend/reportassistant/reporter_agent/migrations/: 0001_initial.py  0002_rename_data_source_id_chart_data_source.py  0003_alter_chart_id.py  0004_alter_chart_meta_data.py  0005_alter_chart_description_alter_chart_title.py  0006_alter_chart_type.py  0007_genaimodel.py  0008_chart_chart_img_url.py
backend/reportassistant/reporter_agent/reporter/: agents.py  graph.py  nodes.py  response.py  state.py  utils.py
backend/reportassistant/reporter_agent/utils/: chart_data.py
(+190 files in other folders)
