[tool.poetry]
name = "report-assistant"
version = "0.1.0"
description = ""
authors = ["Hegedüs Botond <71768180+hbotond1999@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
