[tool.poetry]
name = "report-assistant"
version = "0.1.0"
description = ""
authors = ["Hegedüs Botond <71768180+hbotond1999@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.12"
langgraph = "^0.2.34"
langchain = "^0.3.2"
langchain-openai = "^0.2.2"
django = "^5.1.1"
uvicorn = "^0.34.0"
python-dotenv = "^1.0.1"
# CPU-specific torch verzió
torch = {version = "^2.5.1+cpu", source = "pytorch"}
datasets = {version = "^2.19.0", extras = ["minimal"]}
peft = "^0.13.2"
FlagEmbedding = "^1.3.3"
pymilvus = {extras = ["model"], version = "^2.4.7"}
psycopg2 = "^2.9.9"
neo4j = "^5.25.0"
pandas = "^2.2.3"
tabulate = "^0.9.0"
django-rosetta = "^0.10.1"
django-tasks = "^0.6.0"
python-decouple = "^3.8"

[tool.poetry.dev-dependencies]

# PyTorch forrás megadása
[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"